--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
 :root {
   --dark: #1B262C;
-  --blue-300: #0F4C75;
-  --blue-200: #3282B8;
-  --blue-100: #BBE1FA;
-
-  --gray: #E5E5E5;
+  --font: #464646;
+  --gray: #ededed;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
   background: var(--gray);
+  color: var(--font);
+  font-size: 14px;
+}
+
+h1 {
+  font-family: 'Raleway';
 }
 
 /* Header */
@@ -22,10 +26,38 @@ body {
 }
 
 .logo a {
-  color: var(--blue-300);
+  color: var(--dark);
+  font-weight: 900;
 }
 
 .menu button {
   border: none;
   background: none;
+}
+
+/* home section */
+
+.home {
+  margin: 1rem;
+}
+
+.title h1 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.1;
+  padding: 0.7rem 0;
+}
+
+.links-list ul {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.links-list ul li a {
+  color: var(--font);
+}
+
+.links-list ul li a:hover {
+  text-decoration: underline;
 }
