--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,22 @@
 :root {
-  --dark: #1B262C;
-  --font: #464646;
-  --gray: #ededed;
+  --black: #464646;
+  --background: #f7f7f7;
+  --soft-blue: #EAF2FD;
+  --blue: #2A7AE4;
+  --white: #fff;
 }
 
 body {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
-  background: var(--gray);
-  color: var(--font);
+  background: var(--background);
+  color: var(--black);
   font-size: 14px;
 }
 
-h1 {
-  font-family: 'Raleway';
+h1, h2 {
+  font-size: 22px;
+  font-weight: 700;
 }
 
 /* Header */
@@ -41,9 +44,13 @@ h1 {
   margin: 1rem;
 }
 
+.perfil img {
+  width: 98px;
+  height: 98px;
+  border-radius: 50%;
+}
+
 .title h1 {
-  font-size: 22px;
-  font-weight: 700;
   line-height: 1.1;
   padding: 0.7rem 0;
 }
@@ -60,4 +67,16 @@ h1 {
 
 .links-list ul li a:hover {
   text-decoration: underline;
+}
+
+/* about me section */
+
+.aboutMe {
+  background: var(--soft-blue);
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+}
+
+.aboutMe p {
+  padding: 0.5rem 0;
 }
