--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@
   --blue: #2a7ae4;
   --white: #fff;
   --black-line: rgba(0, 0, 0, 0.323);
-
   --gray: #A2A2A2;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -347,7 +347,25 @@ a:hover {
   padding-top: 1rem;
 }
 
-/* Tablet */
+/* back to top button */
+
+.back-to-top {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  background: var(--white);
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: var(--blue);
+  transform: rotate(-90deg);
+  border: 0.1rem solid var(--blue);
+}
+
+/* tablet */
 
 @media (min-width: 768px) {
   .menu button {
@@ -382,7 +400,14 @@ a:hover {
   .box-large-img {
     height: 300px;
   }
+
+  .back-to-top {
+    width: 3rem;
+    height: 3rem;
+  }
 }
+
+/* desktop */
 
 @media (min-width: 1200px) {
   main {
