--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,11 @@ a:hover {
   text-decoration: underline;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 /* Header */
 
 .header {
@@ -100,6 +105,11 @@ a:hover {
 
 .links-list ul li a {
   color: var(--font);
+}
+
+.links-list img {
+  width: 0.375rem;
+  height: auto;
 }
 
 
@@ -439,6 +449,7 @@ a:hover {
   .perfil img {
     width: 300px;
   }
+
   .home {
     padding-top: 1rem;
     height: 50vh;
@@ -451,6 +462,10 @@ a:hover {
   .links-list ul {
     gap: 3rem;
     margin-top: 2rem;
+  }
+
+  .links-list img {
+    width: 0.625rem;
   }
 
   .aboutMe {
@@ -467,12 +482,25 @@ a:hover {
   }
 
   .box-medium {
-    margin-right: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+    width: 300px;
   }
 
   .box-medium-img {
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 140px;
+  }
+
+  .anhembi-logo {
+    height: 100%;
+  }
+
+  .alura-logo {
+    height: 100%;
+    width: 40%;
   }
 
   .form textarea{
