--- a/assets/css/partials/graduation.css
+++ b/assets/css/partials/graduation.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .boxes-medium {
@@ -57,20 +58,20 @@
     flex-direction: column;
     align-items: center;
     margin: 1rem;
-    width: 300px;
+    width: 200px;
+    height: 200px;
   }
 
   .box-medium-img {
     width: 100%;
-    height: 180px;
   }
 
   .anhembi-logo {
-    height: 100%;
+    height: 90%;
   }
 
   .alura-logo {
     height: 100%;
-    width: 40%;
+    width: 50%;
   }
 }
