--- a/assets/css/partials/skills.css
+++ b/assets/css/partials/skills.css
@@ -14,7 +14,7 @@
 
 .icon {
   color: var(--blue);
-  font-size: 32px;
+  font-size: 60px;
 }
 
 .box {
@@ -32,8 +32,9 @@
   font-weight: 700;
 }
 
-.spring-logo {
-  width: 60%;
+.skills-img {
+  max-width: 4rem;
+  max-height: 4rem;
 }
 
 @media (min-width: 768px) {
@@ -48,10 +49,5 @@
   .box {
     width: 170px;
     height: 150px;
-  }
-
-  .spring-logo {
-    width: 50%;
-    height: 50%;
   }
 }
